--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@expo-google-fonts/livvic": "^0.3.0",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo-google-fonts/space-grotesk": "^0.2.3",
-    "@expo/vector-icons": "^14.0.4",
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/geolocation": "^3.4.0",
+    "@react-native-community/slider": "^4.5.6",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
@@ -27,7 +28,7 @@
     "expo-application": "^6.0.2",
     "expo-av": "~15.0.2",
     "expo-blur": "^14.0.3",
-    "expo-camera": "^16.0.17",
+    "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.8",
     "expo-dev-client": "^5.0.12",
     "expo-device": "~7.0.2",
@@ -35,7 +36,7 @@
     "expo-file-system": "^18.0.11",
     "expo-font": "^13.0.4",
     "expo-haptics": "^14.0.1",
-    "expo-image-picker": "^16.0.6",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-location": "^18.0.7",
     "expo-modules-core": "^2.2.2",
@@ -61,6 +62,7 @@
     "react-native-toast-message": "^2.2.1",
     "react-native-webview": "13.12.5",
     "tailwindcss": "^3.4.17",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "expo-media-library": "~17.0.6"
   }
 }
